@@ -916,7 +916,11 @@ public class Table3D extends Table {
         return !isNullOrEmpty(xAxis.getLogParam()) && !isNullOrEmpty(yAxis.getLogParam());
     }
 
-    protected void highlightLiveData() {
+	public boolean isButtonSelected() {
+		return true;
+	}
+
+	protected void highlightLiveData() {
         if (overlayLog && frame.isVisible()) {
             AxisRange rangeX = getLiveDataRangeForAxis(xAxis);
             AxisRange rangeY = getLiveDataRangeForAxis(yAxis);
